--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "tokens":
     {
-        "openai":"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"
+        "openai":"YOUR API KEY HERE"
     }
 }
