added new key db which contain db details

--- a/config.json
+++ b/config.json
@@ -2,5 +2,12 @@
     "tokens":
     {
         "openai":"YOUR API KEY HERE"
+    },
+    "db":
+    {
+        "user":"root",
+        "password":"asdasd123",
+        "host":"localhost",
+        "database":"CMS"
     }
 }
